--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {
     size: 2.5rem;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana;
 }
 
 p {
