--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,13 @@ h1 {
     size: 2.5rem;
     color: black;
     font-family: Verdana;
+    color: black;
+    
 }
 
 div {
     background-color: blue;
-    color: white;
+    color: rgb(0, 0, 0);
     size: 3.5rem;
+    color: black;
   }
