--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ h1 {
 }
 
 div {
-    background-color: blue;
+    background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
-    size: 3.5rem;
+    size: 2.5rem;
     color: black;
   }
