--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-.sidenav {
-    height: 100;
-    width: 0;
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+.footer {
     position: fixed;
-    z-index: 1;
-    top: 0;
     left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: black;
-    overflow-x: hidden;
-    transition: 0.4s;
-    padding-top: 70px;
+    color: white;
+    text-align: center;
 }
